samples/_failures_safe/1761277427_d373b8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b6ddfe52.c: In function ‘main’:
./samples/SAFE/__tmp_b6ddfe52.c:159:5: error: expected expression at end of input
  159 |     if (
      |     ^~
./samples/SAFE/__tmp_b6ddfe52.c:159:5: error: expected declaration or statement at end of input
